# icfp-2014

./: .gitignore  CODEOWNERS  README.md  ai.clj  ai.gcc  ai.llcoolj  distance.gcc  ghost.gfk  ghost.ghc  list.llcoolj  lman.llcoolj  math.llcoolj  nth.gcc  packager.sh  project.clj
doc/: intro.md
math/: abs.gcc  eq.gcc  gt.gcc  gte.gcc  mod.gcc  not.gcc  nth.gcc
simulator/: CMakeLists.txt  aiproc.cpp  aiproc.hpp  main.cpp  test.cpp  world.cpp  world.hpp
src/icfp2014/: compiler.clj  core.clj  ghc.clj
src/icfp_2014/: compiler.clj  core.clj
test/icfp_2014/: core_test.clj
